...
                style = TextStyle(fontSize = 48.sp, fontWeight = FontWeight.Bold, color = Purple)
            )
            Spacer(modifier = Modifier.height(72.dp))
            TextFieldPurple(
                value = viewModel.nickName,
                onValueChange = viewModel::onNickNameChange,
                label = "Nickname",
                placeHolder = "Nickname"
            )
            Spacer(modifier = Modifier.height(16.dp))
            EmailPasswordSet(
                emailValue = viewModel.email,
                onChangeEmail = viewModel::onEmailChange,
...
